--- a/lr3/lr3.ipynb
+++ b/lr3/lr3.ipynb
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "b1b8209a-3466-45ed-b7ab-b79276813746",
    "metadata": {},
    "outputs": [],
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "8d34c6a5-6964-43ea-b0e4-96964353186d",
    "metadata": {
     "scrolled": true
@@ -8476,7 +8476,7 @@
        "1274                                     спасибо  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8501,11 +8501,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "7a4eb65a-552c-4f59-a33b-6d6e869ecc62",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df.to_csv('./witcher_dict.csv', index=False, encoding='utf-8')"
+   ]
   }
  ],
  "metadata": {
