--- a/lr5/lr5.ipynb
+++ b/lr5/lr5.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "id": "5ab7e4b1-0108-40b1-901b-940fb9fb1608",
    "metadata": {},
    "outputs": [],
@@ -27,31 +27,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 71,
    "id": "22b4a420-c9a7-4fba-a953-c306550bd2e1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "word_df = pd.read_csv('../lr3/witcher_words.csv')\n",
-    "phrase_df = pd.read_csv('../lr3/witcher_phrases.csv')  # Пока не используется."
+    "df = pd.read_csv('../lr3/witcher_words.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 74,
    "id": "f271ebd5-0728-4dfd-9f5f-0e5a102c3457",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def translate_text_to_elf(text: str) -> str:\n",
-    "    \"\"\"Переводит текст на язык Старшей Речи.\"\"\"\n",
+    "def translate_russian_to_elvish(text: str) -> str:\n",
+    "    \"\"\"Переводит русский текст на язык Старшей Речи.\"\"\"\n",
     "\n",
+    "    # Унифицируем е/ё:\n",
     "    text = text.replace('ё', 'е')\n",
-    "    for punc in string.punctuation:\n",
-    "        text = text.replace(punc, '')\n",
     "\n",
-    "    translated_words = []\n",
-    "    for word in text.lower().split():\n",
+    "    # Бьём текст на части по пробелам.\n",
+    "    translated_parts = []\n",
+    "    for part in text.split():\n",
+    "\n",
+    "        # Проверяем не является ли текущая часть набором знаков.\n",
+    "        is_punctuation = True\n",
+    "        for s in part:\n",
+    "            if s not in string.punctuation:\n",
+    "                is_punctuation = False\n",
+    "                break\n",
+    "\n",
+    "        if is_punctuation:\n",
+    "            translated_parts.append(part)\n",
+    "            continue\n",
+    "\n",
+    "        part_len = len(part)\n",
+    "\n",
+    "        # Собираем знаки слева.\n",
+    "        start_part_i = 0\n",
+    "        for i in range(part_len):\n",
+    "            if part[i] in string.punctuation:\n",
+    "                start_part_i += 1\n",
+    "            else:\n",
+    "                break\n",
+    "\n",
+    "        # Собираем знаки справа.\n",
+    "        end_part_i = part_len\n",
+    "        for i in range(part_len):\n",
+    "            if part[part_len - i - 1] in string.punctuation:\n",
+    "                end_part_i -= 1\n",
+    "            else:\n",
+    "                break\n",
+    "\n",
+    "        # Распределяем на три части: знаки слева, чистое слово, знаки справа.\n",
+    "        word = part[start_part_i:end_part_i]\n",
+    "        start_part = part[0:start_part_i]\n",
+    "        end_part = part[end_part_i:]\n",
+    "\n",
+    "        # Флаг для сохранения регистра первой буквы.\n",
+    "        is_title = word.replace('\\'', '').istitle()\n",
+    "\n",
+    "        # Подбираем перевод слова.\n",
+    "        word = word.lower()\n",
     "        word = _word_to_lemm(word)\n",
     "        translate = None\n",
     "        try:\n",
@@ -64,12 +103,19 @@
     "                except ValueError:\n",
     "                    continue\n",
     "\n",
+    "        # Если перевода не нашлось, то делаем ужасные вещи...\n",
     "        if translate is None:\n",
     "            translate = transliterate_russian_to_latin(word)\n",
     "\n",
-    "        translated_words.append(translate)\n",
+    "        # Возвращаем регистр первой буквы.\n",
+    "        if is_title:\n",
+    "            translate = translate.title()\n",
     "\n",
-    "    return ' '.join(translated_words)\n",
+    "        # Формируем полную часть.\n",
+    "        translate_part = start_part + translate + end_part\n",
+    "        translated_parts.append(translate_part)\n",
+    "\n",
+    "    return ' '.join(translated_parts)\n",
     "\n",
     "\n",
     "def _word_to_lemm(word: str) -> str:\n",
@@ -79,7 +125,7 @@
     "\n",
     "def _try_to_find_russian_word_translate(word: str) -> str:\n",
     "    \"\"\"Ищет перевод русского слова в датасете.\"\"\"\n",
-    "    result = word_df.loc[word_df['translation'] == word, 'text']\n",
+    "    result = df.loc[df['translation'] == word, 'text']\n",
     "    if not result.empty:\n",
     "        return result.values[0]\n",
     "    else:\n",
@@ -101,7 +147,7 @@
     "    return synonyms\n",
     "\n",
     "\n",
-    "def transliterate_russian_to_latin(russian_word: str):\n",
+    "def transliterate_russian_to_latin(russian_word: str) -> str:\n",
     "    \"\"\"Функция для латинизации русского слова.\"\"\"\n",
     "    translit_dict = {\n",
     "        'а': 'a', 'б': 'b', 'в': 'v', 'г': 'g', 'д': 'd', 'е': 'e', 'ё': 'yo',\n",
@@ -111,98 +157,119 @@
     "        'ы': 'y', 'ь': '', 'э': 'e', 'ю': 'yu', 'я': 'ya'\n",
     "    }\n",
     "\n",
-    "    latin_word = ''.join(translit_dict.get(char, char) for char in russian_word.lower())\n",
+    "    latin_word = ''.join(translit_dict.get(symbol, symbol) for symbol in russian_word.lower())\n",
     "    return latin_word"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 75,
    "id": "742e1929-f1d9-4859-833e-c60af8d3ecac",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'cead geralt me aymm avallakkh pomoch aé nayti zireael'"
+       "\"Cead, Geralt! Me aymm - Avallak'Kha! Pomoch aé nayti zireael!\""
       ]
      },
-     "execution_count": 46,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "translate_text_to_elf('Здравствуй, Геральт! Моё имя - Аваллак\\'х! Помоги мне найти ласточку!')"
+    "translate_russian_to_elvish('Здравствуй, Геральт! Моё имя - Аваллак\\'х! Помоги мне найти ласточку!')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 66,
    "id": "ddb82075-5717-419e-882d-7c8c627482a6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'va faill luned sinn vort uvidetsya'"
+       "'Va Faill, luned. Sinn vort uvidetsya.'"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "translate_text_to_elf('Прощай, дочь. Мы еще увидимся.')"
+    "translate_russian_to_elvish('Прощай, дочь. Мы еще увидимся.')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 67,
    "id": "ab05e27a-cc62-49de-94ef-31763f62bdf0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'cathain obed aé wett ithte'"
+       "'Cathain obed? Aé wett ithte.'"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "translate_text_to_elf('Когда обед? Я хочу есть.')"
+    "translate_russian_to_elvish('Когда обед? Я хочу есть.')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 68,
    "id": "22976b61-030b-4d51-8956-941678a1c66e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'pochemu etot kurs takoy slozhnyy aé neen ifit'"
+       "'Pochemu etot kurs takoy slozhnyy? Aé neen ifit.'"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "translate_text_to_elf('Почему этот курс такой сложный? Я не знаю.')"
+    "translate_russian_to_elvish('Почему этот курс такой сложный? Я не знаю.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "cbc1ed2b-e2c6-4af1-9f37-9f7534281ad5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Caer Muire elaine eate. Ei anseo conas eie.'"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "translate_russian_to_elvish('Замок Моря прекрасен летом. Он здесь как картина.')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cbc1ed2b-e2c6-4af1-9f37-9f7534281ad5",
+   "id": "7d517f64-72be-46d0-8dae-b374e660d928",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -224,7 +291,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
