--- a/lr5/lr5.ipynb
+++ b/lr5/lr5.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 63,
    "id": "5ab7e4b1-0108-40b1-901b-940fb9fb1608",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 15,
    "id": "22b4a420-c9a7-4fba-a953-c306550bd2e1",
    "metadata": {},
    "outputs": [],
@@ -44,13 +44,14 @@
    "source": [
     "def translate_russian_to_elvish(text: str) -> str:\n",
     "    \"\"\"Переводит русский текст на язык Старшей Речи.\"\"\"\n",
-    "\n",
     "    # Унифицируем е/ё:\n",
     "    text = text.replace('ё', 'е')\n",
     "\n",
     "    # Бьём текст на части по пробелам.\n",
     "    translated_parts = []\n",
-    "    for part in text.split():\n",
+    "\n",
+    "    parts = text.split()\n",
+    "    for part in parts:\n",
     "\n",
     "        # Проверяем не является ли текущая часть набором знаков.\n",
     "        is_punctuation = True\n",
@@ -92,41 +93,47 @@
     "        # Подбираем перевод слова.\n",
     "        word = word.lower()\n",
     "        word = _word_to_lemm(word)\n",
-    "        translate = None\n",
+    "        translation = None\n",
     "        try:\n",
-    "            translate = _try_to_find_russian_word_translate(word)\n",
+    "            translation = _try_to_find_russian_word_translation(word)\n",
     "        except ValueError:\n",
     "            for synonym in _synonyms_of_word(word):\n",
     "                try:\n",
-    "                    translate = _try_to_find_russian_word_translate(word)\n",
+    "                    translation = _try_to_find_russian_word_translation(synonym)\n",
     "                    break\n",
     "                except ValueError:\n",
     "                    continue\n",
     "\n",
     "        # Если перевода не нашлось, то делаем ужасные вещи...\n",
-    "        if translate is None:\n",
-    "            translate = transliterate_russian_to_latin(word)\n",
+    "        if translation is None:\n",
+    "            translation = transliterate_russian_to_latin(word)\n",
     "\n",
     "        # Возвращаем регистр первой буквы.\n",
     "        if is_title:\n",
-    "            translate = translate.title()\n",
+    "            translation = translation.title()\n",
     "\n",
     "        # Формируем полную часть.\n",
-    "        translate_part = start_part + translate + end_part\n",
-    "        translated_parts.append(translate_part)\n",
+    "        translation_part = start_part + translation + end_part\n",
+    "        translated_parts.append(translation_part)\n",
     "\n",
     "    return ' '.join(translated_parts)\n",
     "\n",
     "\n",
     "def _word_to_lemm(word: str) -> str:\n",
-    "    \"\"\"Переводит слово в начальную форму.\"\"\"\n",
-    "    return lemmer.parse(word)[0].normal_form\n",
+    "    \"\"\"Переводит слово/словосочетание в начальную форму.\"\"\"\n",
+    "    parts = []\n",
+    "    for part in word.split():\n",
+    "        part = lemmer.parse(part)[0].normal_form\n",
+    "        parts.append(part)\n",
+    "\n",
+    "    return ' '.join(parts)\n",
     "\n",
     "\n",
-    "def _try_to_find_russian_word_translate(word: str) -> str:\n",
+    "def _try_to_find_russian_word_translation(word: str) -> str:\n",
     "    \"\"\"Ищет перевод русского слова в датасете.\"\"\"\n",
     "    result = df.loc[df['translation'] == word, 'text']\n",
     "    if not result.empty:\n",
+    "        # phrases = df.loc[df['translation'].str.startswith(word) & df['translation'].str.contains(' '), 'translation'].tolist()\n",
     "        return result.values[0]\n",
     "    else:\n",
     "        raise ValueError\n",
@@ -150,11 +157,39 @@
     "def transliterate_russian_to_latin(russian_word: str) -> str:\n",
     "    \"\"\"Функция для латинизации русского слова.\"\"\"\n",
     "    translit_dict = {\n",
-    "        'а': 'a', 'б': 'b', 'в': 'v', 'г': 'g', 'д': 'd', 'е': 'e', 'ё': 'yo',\n",
-    "        'ж': 'zh', 'з': 'z', 'и': 'i', 'й': 'y', 'к': 'k', 'л': 'l', 'м': 'm',\n",
-    "        'н': 'n', 'о': 'o', 'п': 'p', 'р': 'r', 'с': 's', 'т': 't', 'у': 'u',\n",
-    "        'ф': 'f', 'х': 'kh', 'ц': 'ts', 'ч': 'ch', 'ш': 'sh', 'щ': 'shch', 'ъ': '',\n",
-    "        'ы': 'y', 'ь': '', 'э': 'e', 'ю': 'yu', 'я': 'ya'\n",
+    "        'а': 'a', \n",
+    "        'б': 'b', \n",
+    "        'в': 'v', \n",
+    "        'г': 'g', \n",
+    "        'д': 'd', \n",
+    "        'е': 'e', \n",
+    "        'ё': 'yo',\n",
+    "        'ж': 'zh', \n",
+    "        'з': 'z', \n",
+    "        'и': 'i', \n",
+    "        'й': 'y', \n",
+    "        'к': 'k', \n",
+    "        'л': 'l', \n",
+    "        'м': 'm',\n",
+    "        'н': 'n', \n",
+    "        'о': 'o', \n",
+    "        'п': 'p', \n",
+    "        'р': 'r', \n",
+    "        'с': 's', \n",
+    "        'т': 't', \n",
+    "        'у': 'u',\n",
+    "        'ф': 'f', \n",
+    "        'х': 'kh', \n",
+    "        'ц': 'ts', \n",
+    "        'ч': 'ch', \n",
+    "        'ш': 'sh', \n",
+    "        'щ': 'shch', \n",
+    "        'ъ': '',\n",
+    "        'ы': 'y', \n",
+    "        'ь': '', \n",
+    "        'э': 'e', \n",
+    "        'ю': 'yu', \n",
+    "        'я': 'ya',\n",
     "    }\n",
     "\n",
     "    latin_word = ''.join(translit_dict.get(symbol, symbol) for symbol in russian_word.lower())\n",
@@ -170,7 +205,7 @@
     {
      "data": {
       "text/plain": [
-       "\"Cead, Geralt! Me aymm - Avallak'Kha! Pomoch aé nayti zireael!\""
+       "\"Cead, Geralt Gwen Bleidd! Me aymm - Avallak'Kha! Pomoch aé nayti zireael!\""
       ]
      },
      "execution_count": 75,
@@ -179,33 +214,33 @@
     }
    ],
    "source": [
-    "translate_russian_to_elvish('Здравствуй, Геральт! Моё имя - Аваллак\\'х! Помоги мне найти ласточку!')"
+    "translate_russian_to_elvish('Здравствуй, Геральт Белый Волк! Моё имя - Аваллак\\'х! Помоги мне найти ласточку!')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 76,
    "id": "ddb82075-5717-419e-882d-7c8c627482a6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Va Faill, luned. Sinn vort uvidetsya.'"
+       "'Va Faill, luned. Sinn aris vstretitsya.'"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "translate_russian_to_elvish('Прощай, дочь. Мы еще увидимся.')"
+    "translate_russian_to_elvish('Прощай, дочь. Мы еще встретимся.')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 77,
    "id": "ab05e27a-cc62-49de-94ef-31763f62bdf0",
    "metadata": {},
    "outputs": [
@@ -215,7 +250,7 @@
        "'Cathain obed? Aé wett ithte.'"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,17 +261,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 78,
    "id": "22976b61-030b-4d51-8956-941678a1c66e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Pochemu etot kurs takoy slozhnyy? Aé neen ifit.'"
+       "'Hinc etot rider takoy slozhnyy? Aé neen ifit.'"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 79,
    "id": "cbc1ed2b-e2c6-4af1-9f37-9f7534281ad5",
    "metadata": {},
    "outputs": [
@@ -257,7 +292,7 @@
        "'Caer Muire elaine eate. Ei anseo conas eie.'"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +326,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
