--- a/lr5/lr5.ipynb
+++ b/lr5/lr5.ipynb
@@ -5,12 +5,12 @@
    "id": "c24d3fc7-b458-4678-8e99-679b3ab533f8",
    "metadata": {},
    "source": [
-    "К сожалению методами ИИ задачу решить пока не получилось. Перевод сделан простыми алгоритмами. Пока не все сделано, программа будет совершенствоваться."
+    "К сожалению методами ИИ задачу решить пока не получилось. Перевод сделан традиционными алгоритмами."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 5,
    "id": "5ab7e4b1-0108-40b1-901b-940fb9fb1608",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "22b4a420-c9a7-4fba-a953-c306550bd2e1",
    "metadata": {},
    "outputs": [],
@@ -37,106 +37,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 131,
    "id": "f271ebd5-0728-4dfd-9f5f-0e5a102c3457",
    "metadata": {},
    "outputs": [],
    "source": [
     "def translate_russian_to_elvish(text: str) -> str:\n",
-    "    \"\"\"Переводит русский текст на язык Старшей Речи.\"\"\"\n",
+    "    \"\"\"\n",
+    "    Переводит русский текст на язык Старшей Речи.\n",
+    "    Слова, перевод которым подобрать не получилось, латинизируются.\n",
+    "    Присутствует обработка некоторых устойчивых выражений из словаря.\n",
+    "    \"\"\"\n",
+    "\n",
     "    # Унифицируем е/ё:\n",
     "    text = text.replace('ё', 'е')\n",
     "\n",
-    "    # Бьём текст на части по пробелам.\n",
-    "    translated_parts = []\n",
+    "    # Результирующие подстроки для склеивания в конце.\n",
+    "    result_subs = []\n",
     "\n",
-    "    parts = text.split()\n",
-    "    for part in parts:\n",
+    "    # Отделяем слова от пунктуационных знаков:\n",
+    "    subs = re.split(r'(?<=\\.|!|\\?|,|;|:|\\s)|(?=\\.|!|\\?|,|;|:|\\s)', text)\n",
     "\n",
-    "        # Проверяем не является ли текущая часть набором знаков.\n",
-    "        is_punctuation = True\n",
-    "        for s in part:\n",
-    "            if s not in string.punctuation:\n",
-    "                is_punctuation = False\n",
-    "                break\n",
-    "\n",
-    "        if is_punctuation:\n",
-    "            translated_parts.append(part)\n",
+    "    next_i = 0\n",
+    "    for i, sub in enumerate(subs):\n",
+    "        if i < next_i:\n",
     "            continue\n",
     "\n",
-    "        part_len = len(part)\n",
+    "        next_i += 1\n",
+    "        if sub in string.punctuation + ' ':\n",
+    "            result_subs.append(sub)\n",
+    "            continue\n",
     "\n",
-    "        # Собираем знаки слева.\n",
-    "        start_part_i = 0\n",
-    "        for i in range(part_len):\n",
-    "            if part[i] in string.punctuation:\n",
-    "                start_part_i += 1\n",
-    "            else:\n",
-    "                break\n",
-    "\n",
-    "        # Собираем знаки справа.\n",
-    "        end_part_i = part_len\n",
-    "        for i in range(part_len):\n",
-    "            if part[part_len - i - 1] in string.punctuation:\n",
-    "                end_part_i -= 1\n",
-    "            else:\n",
-    "                break\n",
-    "\n",
-    "        # Распределяем на три части: знаки слева, чистое слово, знаки справа.\n",
-    "        word = part[start_part_i:end_part_i]\n",
-    "        start_part = part[0:start_part_i]\n",
-    "        end_part = part[end_part_i:]\n",
-    "\n",
-    "        # Флаг для сохранения регистра первой буквы.\n",
+    "        word = sub\n",
     "        is_title = word.replace('\\'', '').istitle()\n",
-    "\n",
-    "        # Подбираем перевод слова.\n",
     "        word = word.lower()\n",
     "        word = _word_to_lemm(word)\n",
-    "        translation = None\n",
-    "        try:\n",
-    "            translation = _try_to_find_russian_word_translation(word)\n",
-    "        except ValueError:\n",
-    "            for synonym in _synonyms_of_word(word):\n",
-    "                try:\n",
-    "                    translation = _try_to_find_russian_word_translation(synonym)\n",
+    "\n",
+    "        # Текущее слово может быть началом какого-то устойчивого выражения, проверим это.\n",
+    "        it_is_real_phrase = False\n",
+    "        phrases = _find_phrases_that_starts_with_russian_word(word)\n",
+    "        if phrases and i != len(subs) - 1:\n",
+    "            # Будем прибавлять сюда последующие пробелы и слова, пока не встретим что-то лишнее либо не убедимся\n",
+    "            # в том, что это выражение - действительная устойчивая фраза из словаря.\n",
+    "            summ_word = word\n",
+    "\n",
+    "            # Количество итераций для пропуска во внешнем цикле (через `next_i`)\n",
+    "            count_to_pass = 0\n",
+    "\n",
+    "            for sub in subs[i + 1:]:\n",
+    "                if sub in '.!?':\n",
     "                    break\n",
-    "                except ValueError:\n",
-    "                    continue\n",
     "\n",
-    "        # Если перевода не нашлось, то делаем ужасные вещи...\n",
-    "        if translation is None:\n",
-    "            translation = transliterate_russian_to_latin(word)\n",
+    "                count_to_pass += 1\n",
+    "                if sub not in string.punctuation + ' ':\n",
+    "                    sub = _word_to_lemm(sub.lower())\n",
+    "                elif sub == ',':\n",
+    "                    # Опускаем запятые между словами потенциальной фразы.\n",
+    "                    sub = ''\n",
     "\n",
-    "        # Возвращаем регистр первой буквы.\n",
+    "                summ_word += sub\n",
+    "\n",
+    "                need_continue = False\n",
+    "                if summ_word in phrases:\n",
+    "                    it_is_real_phrase = True\n",
+    "                    break\n",
+    "\n",
+    "                for phrase in phrases:\n",
+    "                    if summ_word in phrase:\n",
+    "                        need_continue = True\n",
+    "                        break\n",
+    "\n",
+    "                if not need_continue:\n",
+    "                    break\n",
+    "\n",
+    "            if it_is_real_phrase:\n",
+    "                word = summ_word\n",
+    "                next_i += count_to_pass\n",
+    "                translation = _try_to_find_russian_word_translation(word)\n",
+    "\n",
+    "        if not it_is_real_phrase:\n",
+    "            # Стандартная обработка одиночного слова с подбором синонимов через сайт.\n",
+    "            translation = None\n",
+    "            try:\n",
+    "                translation = _try_to_find_russian_word_translation(word)\n",
+    "            except ValueError:\n",
+    "                for synonym in _synonyms_of_word(word):\n",
+    "                    try:\n",
+    "                        translation = _try_to_find_russian_word_translation(synonym)\n",
+    "                    except ValueError:\n",
+    "                        continue\n",
+    "\n",
+    "            if translation is None:\n",
+    "                translation = _transliterate_russian_to_latin(word)\n",
+    "\n",
     "        if is_title:\n",
-    "            translation = translation.title()\n",
+    "            translation = translation.capitalize()\n",
     "\n",
-    "        # Формируем полную часть.\n",
-    "        translation_part = start_part + translation + end_part\n",
-    "        translated_parts.append(translation_part)\n",
+    "        result_subs.append(translation)\n",
     "\n",
-    "    return ' '.join(translated_parts)\n",
+    "    return ''.join(result_subs)\n",
     "\n",
     "\n",
     "def _word_to_lemm(word: str) -> str:\n",
     "    \"\"\"Переводит слово/словосочетание в начальную форму.\"\"\"\n",
     "    parts = []\n",
     "    for part in word.split():\n",
-    "        part = lemmer.parse(part)[0].normal_form\n",
+    "        part = lemmer.parse(part)[0].normal_form.replace('ё', 'е')\n",
     "        parts.append(part)\n",
     "\n",
     "    return ' '.join(parts)\n",
     "\n",
     "\n",
     "def _try_to_find_russian_word_translation(word: str) -> str:\n",
-    "    \"\"\"Ищет перевод русского слова в датасете.\"\"\"\n",
+    "    \"\"\"Ищет перевод русского слова/словосочетания в датасете.\"\"\"\n",
     "    result = df.loc[df['translation'] == word, 'text']\n",
     "    if not result.empty:\n",
-    "        # phrases = df.loc[df['translation'].str.startswith(word) & df['translation'].str.contains(' '), 'translation'].tolist()\n",
     "        return result.values[0]\n",
     "    else:\n",
     "        raise ValueError\n",
+    "\n",
+    "\n",
+    "def _find_phrases_that_starts_with_russian_word(word: str) -> list[str]:\n",
+    "    return df.loc[df['translation'].str.startswith(word) & df['translation'].str.contains(' '), 'translation'].tolist()\n",
     "\n",
     "\n",
     "def _synonyms_of_word(word: str) -> str:\n",
@@ -154,7 +176,7 @@
     "    return synonyms\n",
     "\n",
     "\n",
-    "def transliterate_russian_to_latin(russian_word: str) -> str:\n",
+    "def _transliterate_russian_to_latin(russian_word: str) -> str:\n",
     "    \"\"\"Функция для латинизации русского слова.\"\"\"\n",
     "    translit_dict = {\n",
     "        'а': 'a', \n",
@@ -198,17 +220,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 109,
    "id": "742e1929-f1d9-4859-833e-c60af8d3ecac",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"Cead, Geralt Gwen Bleidd! Me aymm - Avallak'Kha! Pomoch aé nayti zireael!\""
+       "\"Cead, Geralt Gwynbleidd! Me aymm - Avallak'kha! Pomoch aé nayti zireael!\""
       ]
      },
-     "execution_count": 75,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,17 +241,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 110,
    "id": "ddb82075-5717-419e-882d-7c8c627482a6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Va Faill, luned. Sinn aris vstretitsya.'"
+       "'Va faill, luned. Sinn aris vstretitsya.'"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 111,
    "id": "ab05e27a-cc62-49de-94ef-31763f62bdf0",
    "metadata": {},
    "outputs": [
@@ -250,7 +272,7 @@
        "'Cathain obed? Aé wett ithte.'"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,17 +283,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 112,
    "id": "22976b61-030b-4d51-8956-941678a1c66e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Hinc etot rider takoy slozhnyy? Aé neen ifit.'"
+       "'Que etot rider takoy slozhnyy? Aé neen ifit.'"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,29 +304,155 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 113,
    "id": "cbc1ed2b-e2c6-4af1-9f37-9f7534281ad5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Caer Muire elaine eate. Ei anseo conas eie.'"
+       "\"Caer a'muirehen elaine eate. Ei anseo conas eie.\""
       ]
      },
-     "execution_count": 79,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "translate_russian_to_elvish('Замок Моря прекрасен летом. Он здесь как картина.')"
+    "translate_russian_to_elvish('Крепость Старого Моря прекрасна летом. Он здесь как картина.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "id": "7d517f64-72be-46d0-8dae-b374e660d928",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Cead, esseath ghnath, meas.'"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "translate_russian_to_elvish('Привет, я в порядке, спасибо.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "id": "6acc72fe-9418-4725-9bf0-24c279cf6dca",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"Que te eras'wett?\""
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "translate_russian_to_elvish('Что ты хочешь?')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "id": "852640b4-9615-4074-bd7c-336dcfabb7f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Zdarov! Ceadmil!'"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "translate_russian_to_elvish('Здарова! Привет всем!')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "id": "7871867f-a064-45b9-a5ad-c79fdc6dfeac",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"Neen zabyvat, Tsiri. Evellienn, cathain va'esse deireadh aep eigean va'esse eighe faidh'ar.\""
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "translate_russian_to_elvish('Не забывай, Цири. Всегда, когда что-то кончается, что-то начинается.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "id": "15693d33-3ad7-42a2-8533-1c8f7750dc54",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'А faoi lathair ayd tuve.'"
+      ]
+     },
+     "execution_count": 124,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "translate_russian_to_elvish('Это в настоящее время нельзя делать.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "id": "56d9d538-e928-4401-95dc-72490dd265eb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"Esseath que! Aereeh't do aenye! An wenn beagnach muchfar.\""
+      ]
+     },
+     "execution_count": 132,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "translate_russian_to_elvish('Ты что! Следи за огнем! Костер почти прогорел.')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d517f64-72be-46d0-8dae-b374e660d928",
+   "id": "0acc622d-9e4d-4c73-a5ff-09ebcc3ab5b2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -326,7 +474,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
